--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://raymondng117.github.io/addBlogs.git",
+  "homepage": "https://raymondng117.github.io/BlogsProject",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
