--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://Nywiz.github.io/portfolio",
-  "name": "dojo-blog",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
