--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://raymondng117.github.io/portfolio",
+  "homepage": "https://raymondng117.github.io/portfolio_v",
   "name": "portfolio",
   "version": "1.0.0",
   "private": true,
